forms-flow-analytics/dhcho/dev/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-analytics
  namespace : forms-flow-analytics
  labels:
    app.kubernetes.io/name: analytics
spec:
  replicas: 1
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: analytics
  template:
    metadata:
      labels:
        app.kubernetes.io/name: analytics
    spec:
      imagePullSecrets:
        - name: private-registr
      containers:
        - name: form-flow-analytics-web
          image: formsflow/redash:10.1.4
          ports:
            - containerPort: 5000
              name: analytics
              protocol: TCP
          args: ["server"]
        - name: form-flow-analytics-scheluder
          image: formsflow/redash:10.1.4        
          resources:
            requests:
              memory: 1Gi
          args: [ "scheduler" ]
        - name: form-flow-analytics-workers
          image: formsflow/redash:10.1.4        
          resources:
            requests:
              memory: 1Gi
          args: ["worker"]
        - name: form-flow-analytics-adhoc
          image: formsflow/redash:10.1.4        
          resources:
            requests:
              memory: 1Gi
          args: ["worker"]
        - name: redis
          image: redis:6-alpine
          ports:
            - name: redis
              containerPort: 6379
