forms-flow-analytics/dhcho/dev/service_dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: forms-flow-analytics-svc
  namespace: forms-flow-analytics
  labels:
    app.kubernetes.io/name: analytics
spec:
  selector:
    app.kubernetes.io/name: analytics
  ports:
    - name: forms-flow-analytics-port
      protocol: TCP
      port: 5000
      targetPort: 5000
